--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prepare": "run-p prepare:*"
   },
   "dependencies": {
+    "@opensearch-project/opensearch": "^2.2.0",
     "env-paths": "^3.0.0",
     "make-fetch-happen": "^11.0.3",
     "rimraf": "^4.1.2",
