--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "wait-port": "^1.0.4"
   },
   "devDependencies": {
+    "@nasa-gcn/eslint-config-gitignore": "^0.0.1",
     "@tsconfig/node14": "^1.0.3",
     "@types/make-fetch-happen": "^10.0.1",
     "@types/node": "^18.13.0",
@@ -43,11 +44,12 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.4"
+    "prettier": "^3.0.0"
   },
   "prettier": {
     "semi": false,
-    "singleQuote": true
+    "singleQuote": true,
+    "trailingComma": "es5"
   },
   "eslintConfig": {
     "env": {
@@ -56,6 +58,7 @@
     },
     "extends": [
       "eslint:recommended",
+      "@nasa-gcn/eslint-config-gitignore",
       "prettier"
     ],
     "overrides": [
