Reuse Node.js workflow
See https://github.com/nasa-gcn/gcn.nasa.gov/pull/1477

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "prepare:esbuild": "esbuild index.ts --bundle --packages=external --outfile=index.js --platform=node --format=esm --tree-shaking=true",
     "prepare": "run-p prepare:*"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
     "@opensearch-project/opensearch": "^2.2.0",
     "env-paths": "^3.0.0",
