--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@nasa-gcn/eslint-config-gitignore": "^0.0.1",
     "@tsconfig/node14": "^1.0.3",
+    "@types/lodash": "^4.14.202",
     "@types/make-fetch-happen": "^10.0.1",
     "@types/node": "^18.13.0",
     "@types/tar": "^6.1.4",
