--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@opensearch-project/opensearch": "^2.2.0",
     "env-paths": "^3.0.0",
+    "lodash": "^4.17.21",
     "make-fetch-happen": "^11.0.3",
     "rimraf": "^4.1.2",
     "tar": "^6.1.13",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@nasa-gcn/eslint-config-gitignore": "^0.0.1",
     "@tsconfig/node14": "^1.0.3",
+    "@types/lodash": "^4.14.202",
     "@types/make-fetch-happen": "^10.0.1",
     "@types/node": "^18.13.0",
     "@types/tar": "^6.1.4",
