--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   ],
   "type": "module",
   "files": [
-    "index.js"
+    "index.js",
+    "heartbeat.js"
   ],
   "scripts": {
     "prepare:husky": "husky install",
