add forked docker process

--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   ],
   "type": "module",
   "files": [
-    "index.js"
+    "index.js",
+    "launchSearch.js"
   ],
   "scripts": {
     "prepare:husky": "husky install",
     "prepare:esbuild": "esbuild index.ts --bundle --packages=external --outfile=index.js --platform=node --format=esm --tree-shaking=true",
+    "prepare:docker": "esbuild launchSearch.ts --bundle --packages=external --outfile=launchSearch.js --platform=node --format=esm --tree-shaking=true",
     "prepare": "run-p prepare:*"
   },
   "engines": {
