--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "scripts": {
     "prepare:husky": "husky install",
-    "prepare:esbuild": "node esbuild.js",
+    "prepare:esbuild": "esbuild index.ts launchSearch.ts --bundle --packages=external --outdir=. --platform=node --format=esm --tree-shaking=true",
     "prepare": "run-p prepare:*"
   },
   "engines": {
