--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "@tsconfig/node14/tsconfig.json",
   "compilerOptions": {
+    "incremental": true,
+    "noEmit": true,
     "resolveJsonModule": true,
     "module": "esnext",
     "target": "es2022"
