--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
   ],
   "scripts": {
     "prepare:husky": "husky install",
-    "prepare:esbuild": "esbuild index.ts --bundle --packages=external --outfile=index.js --platform=node --format=esm --tree-shaking=true",
-    "prepare": "run-p prepare:*"
+    "prepare:esbuild": "esbuild index.ts __tests__/test.ts --outdir=. --bundle --packages=external --platform=node --format=esm --tree-shaking=true",
+    "prepare": "run-p prepare:*",
+    "test": "node --test"
   },
   "engines": {
     "node": ">=18"
   },
   "dependencies": {
     "@opensearch-project/opensearch": "^2.2.0",
-    "@nasa-gcn/architect-functions-search": "^1.0.0",
     "dockerode": "^4.0.0",
     "env-paths": "^3.0.0",
     "lodash": "^4.17.21",
@@ -38,6 +38,9 @@
     "wait-port": "^1.0.4"
   },
   "devDependencies": {
+    "@architect/architect": "^11.0.8",
+    "@architect/functions": "^8.1.6",
+    "@nasa-gcn/architect-functions-search": "^1.0.1",
     "@nasa-gcn/eslint-config-gitignore": "^0.0.1",
     "@tsconfig/node14": "^1.0.3",
     "@types/dockerode": "^3.3.23",
