--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   ],
   "scripts": {
     "prepare:husky": "husky install",
-    "prepare:esbuild": "esbuild index.ts __tests__/test.ts --outdir=. --bundle --packages=external --platform=node --format=esm --tree-shaking=true",
-    "prepare": "run-p prepare:*",
-    "test": "node --test"
+    "prepare:esbuild": "esbuild index.ts --bundle --packages=external --outfile=index.js --platform=node --format=esm --tree-shaking=true",
+    "prepare": "run-p prepare:*"
   },
   "engines": {
     "node": ">=18"
   },
   "dependencies": {
+    "@nasa-gcn/architect-functions-search": "^1.0.0",
     "@opensearch-project/opensearch": "^2.2.0",
     "dockerode": "^4.0.0",
     "env-paths": "^3.0.0",
@@ -38,9 +38,6 @@
     "wait-port": "^1.0.4"
   },
   "devDependencies": {
-    "@architect/architect": "^11.0.8",
-    "@architect/functions": "^8.1.6",
-    "@nasa-gcn/architect-functions-search": "^1.0.1",
     "@nasa-gcn/eslint-config-gitignore": "^0.0.1",
     "@tsconfig/node14": "^1.0.3",
     "@types/dockerode": "^3.3.23",
@@ -53,6 +50,7 @@
     "esbuild": "^0.17.8",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
+    "execa": "^9.3.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
     "npm-run-all": "^4.1.5",
