--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "index.js"
   ],
   "scripts": {
-    "prepare:husky": "husky install",
+    "prepare:husky": "husky",
     "prepare:esbuild": "esbuild index.ts --bundle --packages=external --outfile=index.js --platform=node --format=esm --tree-shaking=true",
     "prepare": "run-p prepare:*"
   },
@@ -51,7 +51,7 @@
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "execa": "^9.3.0",
-    "husky": "^8.0.3",
+    "husky": "^9.1.0",
     "lint-staged": "^15.2.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0"
