--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "wait-port": "^1.0.4"
   },
   "devDependencies": {
+    "@architect/architect": "^11.2.0",
+    "@aws-sdk/client-ssm": "^3.777.0",
     "@nasa-gcn/eslint-config-gitignore": "^0.0.2",
     "@tsconfig/node14": "^14.1.2",
     "@types/dockerode": "^3.3.23",
