--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "make-fetch-happen": "^14.0.0",
     "rimraf": "^4.1.2",
     "tar": "^7.4.1",
+    "tree-kill": "^1.2.2",
     "unzip-stream": "^0.3.1",
     "wait-port": "^1.0.4"
   },
