--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node": ">=20"
   },
   "dependencies": {
+    "@architect/utils": "^4.0.6",
     "@nasa-gcn/architect-functions-search": "^1.0.0",
     "@nasa-gcn/architect-plugin-utils": "^0.2.0",
     "@opensearch-project/opensearch": "^2.2.0",
