--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,6 @@
     "resolveJsonModule": true,
     "module": "esnext",
     "target": "es2022"
-  }
+  },
+  "include": ["architect_utils.d.ts"]
 }
