--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,7 @@
 {
-  "extends": "@tsconfig/node14/tsconfig.json",
+  "extends": "@tsconfig/node20/tsconfig.json",
   "compilerOptions": {
     "incremental": true,
-    "noEmit": true,
-    "module": "esnext",
-    "target": "es2022"
+    "noEmit": true
   }
 }
